Adding translation files
finnish/english .csv

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,2 +1,59 @@
-"delivery_time","Deliverytime"
-"shipfunk_error_7","Shipfunk service couldn't create the package cards. The problem could be with the given parcels, or the service itself is down. See the limits and rules for creating parcels from here: *thelink*. If you think that the parcels are set correctly, try again later or send us a notice into our technical service: love@shipfunk.com"
+"Please correct the parent block for this block.","Please correct the parent block for this block."
+"The shipment has been created.","The shipment has been created."
+"Cannot save shipment.","Cannot save shipment."
+shipfunk_error_7,shipfunk_error_7
+days,days
+"No packages for request","No packages for request"
+"Ship with BoxPacker","Ship with BoxPacker"
+"%customer_name,","%customer_name,"
+"Thank you for your order from %store_name.","Thank you for your order from %store_name."
+"Once your package ships we will send you a tracking number.","Once your package ships we will send you a tracking number."
+"You can check the status of your order by <a href=""%account_url"">logging into your account</a>.","You can check the status of your order by <a href=""%account_url"">logging into your account</a>."
+"If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>","If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>"
+"or call us at <a href=""tel:%store_phone"">%store_phone</a>","or call us at <a href=""tel:%store_phone"">%store_phone</a>"
+"Our hours are <span class=""no-link"">%store_hours</span>.","Our hours are <span class=""no-link"">%store_hours</span>."
+"Your Order <span class=""no-link"">#%increment_id</span>","Your Order <span class=""no-link"">#%increment_id</span>"
+"Placed on <span class=""no-link"">%created_at</span>","Placed on <span class=""no-link"">%created_at</span>"
+"Billing Info","Billing Info"
+"Shipping Info","Shipping Info"
+"Pickup Info","Pickup Info"
+"Payment Method","Payment Method"
+"Shipping Method","Shipping Method"
+"Your %store_name order confirmation","Your %store_name order confirmation"
+"%name,","%name,"
+"If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>.","If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>."
+"Shipping Address","Shipping Address"
+"New Address","New Address"
+"Shipping Methods","Shipping Methods"
+Next,Next
+"Sorry, no quotes are available for this order at this time","Sorry, no quotes are available for this order at this time"
+"Something went wrong","Something went wrong"
+"Something went wrong while storing the pickup points","Something went wrong while storing the pickup points"
+"Something went wrong test","Something went wrong test"
+"Field ","Field "
+" is required."," is required."
+"Points selection is disabled.","Points selection is disabled."
+"Please select shipping method and/or pickup point.","Please select shipping method and/or pickup point."
+Shipfunk,Shipfunk
+Enabled,Enabled
+"Shipfunk Username","Shipfunk Username"
+"Shipfunk Password","Shipfunk Password"
+"Dev Environment","Dev Environment"
+Title,Title
+"Ship to Applicable Countries","Ship to Applicable Countries"
+"Ship to Specific Countries","Ship to Specific Countries"
+"Weight Attribute","Weight Attribute"
+"Weight Unit","Weight Unit"
+"Default Product Weight","Default Product Weight"
+"Length Attribute","Length Attribute"
+"Length Unit","Length Unit"
+"Default Product Length","Default Product Length"
+"Width Attribute","Width Attribute"
+"Width Unit","Width Unit"
+"Default Product Width","Default Product Width"
+"Depth Field","Depth Field"
+"Depth Unit","Depth Unit"
+"Default Product Depth","Default Product Depth"
+"Default Category","Default Category"
+"Category Sorting","Category Sorting"
+Warehouse,Warehouse
