--- a/i18n/fi_FI.csv
+++ b/i18n/fi_FI.csv
@@ -1,2 +1,66 @@
-"delivery_time","Deliverytime"
-"shipfunk_error_7","Shipfunk service couldn't create the package cards. The problem could be with the given parcels, or the service itself is down. See the limits and rules for creating parcels from here: *thelink*. If you think that the parcels are set correctly, try again later or send us a notice into our technical service: love@shipfunk.com"
+"Please correct the parent block for this block.","Please correct the parent block for this block."
+"The shipment has been created.","Lähetys on luotu."
+"Cannot save shipment.","Lähetystä ei voida tallentaa."
+shipfunk_error_7,shipfunk_error_7
+days,päivää
+"No packages for request","Ei paketteja haulle"
+"Ship with BoxPacker","Lähetä käyttäen BoxPackeria"
+"%customer_name,","%customer_name,"
+"Thank you for your order from %store_name.","Kiitoksia ostoksistasi %store_name."
+"Once your package ships we will send you a tracking number.","Kun paketti lähtee liikenteeseen lähetämme sinulle seurantanumeron."
+"You can check the status of your order by <a href=""%account_url"">logging into your account</a>.","Voit tarkistaa tilauksesi tilanteen <a href=""%account_url"">kirjautumalla tilillesi</a>."
+"If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>","Jos sinulla on kysyttävää tilauksestasi, voit lähettää sähköpostia <a href=""mailto:%store_email"">%store_email</a>"
+"or call us at <a href=""tel:%store_phone"">%store_phone</a>","tai soittaa <a href=""tel:%store_phone"">%store_phone</a>"
+"Our hours are <span class=""no-link"">%store_hours</span>.","Aukioloaikamme ovat <span class=""no-link"">%store_hours</span>."
+"Your Order <span class=""no-link"">#%increment_id</span>","Tilauksesi <span class=""no-link"">#%increment_id</span>"
+"Placed on <span class=""no-link"">%created_at</span>","Tilausaika <span class=""no-link"">%created_at</span>"
+"Billing Info","Laskutustiedot"
+"Shipping Info","Lähetystiedot"
+"Pickup Info","Noutotiedot"
+"Payment Method","Maksutapa"
+"Shipping Method","Lähetystapa"
+"Your %store_name order confirmation","Sinun %store_name tilausvarmistus"
+"%name,","%name,"
+"If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>.","Jos sinulla on kysyttävää tilauksestasi, voit lähettää sähköpostia meille <a href=""mailto:%store_email"">%store_email</a>."
+"Shipping Address","Lähetysosoite"
+"New Address","Uusi osoite"
+"Shipping Methods","Lähetystavat"
+Next,Seuraava
+"Sorry, no quotes are available for this order at this time","Pahoittelut, tilaukselle ei ole tarjouksia saatavissa tällä hetkellä"
+"Something went wrong","Jokin meni vikaan"
+"Something went wrong while storing the pickup points","Jokin meni vikaan tallentaessa noutopisteitä"
+"Something went wrong test","Jokin meni vikaan testi"
+"Field ","Kenttä "
+" is required."," on pakollinen."
+"Points selection is disabled.","Pisteiden valinta on poissa päältä."
+"Please select shipping method and/or pickup point.","Valitse toimitustapa ja/tai noutopiste, kiitos."
+Shipfunk,Shipfunk
+Enabled,Päällä
+"Shipfunk Username","Shipfunk Käyttäjätunnus"
+"Shipfunk Password","Shipfunk Salasana"
+"Dev Environment","Testiympäristö"
+Title,Titteli
+"Ship to Applicable Countries","Lähetys käytettävissä oleviin maihin"
+"Ship to Specific Countries","Lähetys tiettyihin maihin"
+"Weight Attribute","Painomääre"
+"Weight Unit","Painoyksikkö"
+"Default Product Weight","Tuotteen oletuspaino"
+"Length Attribute","Pituusmääre"
+"Length Unit","Pituuden yksikkö"
+"Default Product Length","Tuotteen oletuspituus"
+"Width Attribute","Leveysmääre"
+"Width Unit","Leveyden yksikkö"
+"Default Product Width","Tuotteen oletusleveys"
+"Depth Field","Syvyysmääre"
+"Depth Unit","Syvyyden yksikkö"
+"Default Product Depth","Tuotteen oletussyvyys"
+"Default Category","Oletuskategoria"
+"Category Sorting","Kategoriajärjestäminen"
+Warehouse,Varasto
+"Use this if no value can be found in Weight-Field","Käytetään jos painoarvoa ei löydetä"
+"Use this if no value can be found in Length-Field","Käytetään jos pituusarvoa ei löydetä"
+"Use this if no value can be found in Width-Field","Käytetään jos leveysarvoa ei löydetä"
+"Use this if no value can be found in Depth-Field","Käytetään jos syvyysarvoa ei löydetä"
+"If a shipping method has not been assigned to any category, it will use this one","Jos lähetystapaa ei ole asetettu mihinkään kategoriaan, käytetään tätä"
+"If enabled, shipping methods will be categorized based on Shipfunk extranet settings","Jos päällä, niin lähetystavat kategorioidaan Shipfunkin Extranet asetuksien mukaan"
+"Must be identical as in Shipfunk extranet","Oltava täysin sama kuin Shipfunkin Extranetissä"
