Few more translation fixes

--- a/i18n/fi_FI.csv
+++ b/i18n/fi_FI.csv
@@ -6,8 +6,8 @@ days,päivää
 "No packages for request","Ei paketteja haulle"
 "Ship with BoxPacker","Lähetä käyttäen BoxPackeria"
 "%customer_name,","%customer_name,"
-"Thank you for your order from %store_name.","Kiitoksia ostoksistasi %store_name."
-"Once your package ships we will send you a tracking number.","Kun paketti lähtee liikenteeseen lähetämme sinulle seurantanumeron."
+"Thank you for your order from %store_name.","Kiitoksia %store_name tilauksestanne."
+"Once your package ships we will send you a tracking number.","Lähetämme sinulle seurantanumeron, kun paketti on lähetetty."
 "You can check the status of your order by <a href=""%account_url"">logging into your account</a>.","Voit tarkistaa tilauksesi tilanteen <a href=""%account_url"">kirjautumalla tilillesi</a>."
 "If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>","Jos sinulla on kysyttävää tilauksestasi, voit lähettää sähköpostia <a href=""mailto:%store_email"">%store_email</a>"
 "or call us at <a href=""tel:%store_phone"">%store_phone</a>","tai soittaa <a href=""tel:%store_phone"">%store_phone</a>"
@@ -18,15 +18,15 @@ days,päivää
 "Shipping Info","Lähetystiedot"
 "Pickup Info","Noutotiedot"
 "Payment Method","Maksutapa"
-"Shipping Method","Lähetystapa"
+"Shipping Method","Toimitustapa"
 "Your %store_name order confirmation","Teidän %store_name tilausvarmistuksenne"
 "%name,","%name,"
 "If you have questions about your order, you can email us at <a href=""mailto:%store_email"">%store_email</a>.","Jos sinulla on kysyttävää tilauksestasi, voit lähettää sähköpostia meille <a href=""mailto:%store_email"">%store_email</a>."
 "Shipping Address","Lähetysosoite"
 "New Address","Uusi osoite"
-"Shipping Methods","Lähetystavat"
+"Shipping Methods","Toimitustavat"
 Next,Seuraava
-"Sorry, no quotes are available for this order at this time","Pahoittelut, tilaukselle ei ole tarjouksia saatavissa tällä hetkellä"
+"Sorry, no quotes are available for this order at this time","Valitettavasti tilaukselle ei ole tarjouksia saatavissa tällä hetkellä"
 "Something went wrong","Jokin meni vikaan"
 "Something went wrong while storing the pickup points","Jokin meni vikaan tallentaessa noutopisteitä"
 "Something went wrong test","Jokin meni vikaan testi"
@@ -64,3 +64,4 @@ Warehouse,Varasto
 "If a shipping method has not been assigned to any category, it will use this one","Jos lähetystapaa ei ole asetettu mihinkään kategoriaan, käytetään tätä"
 "If enabled, shipping methods will be categorized based on Shipfunk extranet settings","Jos päällä, niin lähetystavat kategorioidaan Shipfunkin Extranet asetuksien mukaan"
 "Must be identical as in Shipfunk extranet","Oltava täysin sama kuin Shipfunkin Extranetissä"
+"Choose pickup location","Valitse noutopiste"
