Some more translations
Missing from orders

--- a/i18n/fi_FI.csv
+++ b/i18n/fi_FI.csv
@@ -1,4 +1,4 @@
-"Please correct the parent block for this block.","Please correct the parent block for this block."
+﻿"Please correct the parent block for this block.","Please correct the parent block for this block."
 "The shipment has been created.","Lähetys on luotu."
 "Cannot save shipment.","Lähetystä ei voida tallentaa."
 shipfunk_error_7,shipfunk_error_7
@@ -65,3 +65,23 @@ Warehouse,Varasto
 "If enabled, shipping methods will be categorized based on Shipfunk extranet settings","Jos päällä, niin lähetystavat kategorioidaan Shipfunkin Extranet asetuksien mukaan"
 "Must be identical as in Shipfunk extranet","Oltava täysin sama kuin Shipfunkin Extranetissä"
 "Choose pickup location","Valitse noutopiste"
+"You saved the configuration.","Asetukset tallennettu."
+"Send Email","Lähetä sähköposti"
+"Pickup Point","Noutopiste"
+"Payment Information","Maksutiedot"
+"Create Shipping Label","Luo pakettikortti"
+"Email Copy of Shipment","Sähköpostita kopio lähetyksestä"
+"Items to Ship","Lähetettävät tuotteet"
+"Shipping Information","Lähetystiedot"
+"Shipment Total","Lähetys"
+"Add Selected Product(s) to Package","Lisää valitut tuotteet pakettiin"
+"Add Package","Lisää paketti"
+"Add Products to Package","Lisää tuotteita pakettiin"
+"We don't have enough information to create shipping labels. Please make sure your store information and settings are complete.","Pakettikorttien tekoon tarvittavia tietoja puuttuu. Varmista että kauppasi tiedot ja asetukset ovat laitettuna oikein."
+"Notes for this Order","Tilauksen muistiinpanot"
+"An error occurred while creating shipping label.","Pakettikorttia luodessa tapahtui virhe."
+"You created the shipping label.","Olet tehnyt pakettikortin."
+"Pickup Point","Noutopiste"
+"Check / Money order","Shekki-/Rahatilaus"
+"Place Order","Vahvista Tilaus"
+"Products will be packed into the parcels by an automatic box packer which could make mistakes, if the product details are not suffiecient or the product dimensions are somehow difficult for the algorithm","Tuotteet pakataan kolleihin käyttäen automaattista BoxPackeria, mikä voi tehdä virheitä jos tuotetiedot eivät ole riittävät tai tuotteen mittasuhteet ovat erityisen haastavat algoritmille."
